--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "firebase": "^9.7.0",
+    "flowbite": "^1.4.5",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-firebase-hooks": "^5.0.3",
@@ -15,6 +16,7 @@
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.1",
+    "swiper": "^8.1.4",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
